# test-accessory-scanner

./: .gitignore  CONTRIBUTING.md  README.md  bump_version.py  changelog.txt  ipaddress.py  pyproject.toml
.github/workflows/: release-please.yml
docs/: api.md  architecture.md  contributing.md
src/: iperf_discovery.py
tests/: test_scanner.py
