[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-accessory-finder"
version = "1.0.14"
description = "Automation tooling for test-accessory-finder."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Kris Armstrong" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.5.5",
  "black>=24.8"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--maxfail=1 --disable-warnings"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "RUF"]
ignore = ["S101"]

[tool.black]
line-length = 100
target-version = ["py311"]
